# backtester

./: .gitignore  .~lock.bt.csv#  .~lock.output.csv#  .~lock.sma_cross.csv#  CHANGELOG.md  Cargo.toml  README.md  backtest.csv  chart.html  cpp_compare.csv  debug.csv  provacsv.csv  rsi_backtest.csv  savedata.csv  sma_cross.csv  strategies.csv  test.csv  trade_list.csv
.github/workflows/: ci.yml
benches/: performances.rs
examples/: backtesting.rs  backtesting_new.rs  charming.rs  chart.rs  chart_new.rs  compare.rs  compare_new.rs  cpp_compare.rs  download_and_chart.rs  i_chart.rs  log.rs  log_new.rs  modify_strategy.rs  modify_strategy_new.rs  run.rs  screener.rs  stateful.rs  strategy.rs  strategy_new.rs  trades.rs  trades_new.rs
src/: backtester.rs  backtester_new.rs  broker.rs  bt_run.rs  chart_test.rs  charts.rs  config.rs  data.rs  datas.rs  errors.rs  lib.rs  metrics.rs  orders.rs  report.rs  reports.rs  risk_manager.rs  screeners.rs  stateful.rs  strategies.rs  ta.rs  trades.rs  utilities.rs  utilities2.rs
test_data/: bt_runs.toml
tests/: backtester_tests.rs  data_tests.rs  datas_tests.rs  metrics_tests.rs  report_tests.rs  strategies_tests.rs  ta_tests.rs  trades_tests.rs
