[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "2.1.0"
tokio-test = "0.4.3"
chrono = { version = "0.4.33", features = [] }
plotters = "0.3.5"
serde = "1.0.196"
csv = "1.3.0"