[package]
name = "rs-backtester"
version = "0.1.2"
description = "Financial backesting library"
license = "Apache-2.0"
repository = "https://github.com/nicferrari/backtester"
edition = "2021"

[dependencies]
yahoo_finance_api = "2.2.1"
tokio-test = "0.4.3"
chrono = { version = "0.4.33", features = [] }
plotters = "0.3.5"
serde = "1.0.196"
csv = "1.3.0"

[dev-dependencies]
rand = "0.8.5"