[package]
name = "rs-backtester"
version = "0.1.4"
description = "Financial backesting library"
license = "Apache-2.0"
repository = "https://github.com/nicferrari/backtester"
edition = "2021"
exclude = ["stateful.rs"]

[dependencies]
yahoo_finance_api = "2.2.1"
tokio-test = "0.4.3"
chrono = { version = "0.4.33", features = [] }
plotters = "0.3.5"
serde = { version="1.0.196", features = ["derive","rc"] }
csv = "1.3.0"
once_cell = "1.19.0"
charming = "0.4.0"
toml = "0.9.7"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.7.0"

[[bench]]
name = "performances"
harness = false